--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,31 @@
 * {
-  font-family: 'Montserrat', sans-serif;
   color: #393c41;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Gotham';
+  src: url('./fonts/Gotham/GothamLight.ttf') format('truetype');
+  font-weight: lighter;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gotham';
+  src: url('./fonts/Gotham/GothamMedium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gotham';
+  src: url('./fonts/Gotham/GothamBold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 body {
   width: 100%;
-  overflow-x: hidden;
 }
 
 @keyframes animateDown {
